--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+<!--    settings screen labels-->
+    <string name="textViewRounds">Rounds</string>
+    <string name="textViewActivityTime">Activity time</string>
+    <string name="textViewBreakTime">Break time</string>
+    <string name="textViewScreenLock">Screen lock</string>
+    <string name="textViewVolume">Volume</string>
+    <string name="textViewTotalTime">total time</string>
+    <string name="buttonStart">START</string>
 </resources>
